fix extra long lines in IE11 never wrapping

--- a/src/stick-n-slide.scss
+++ b/src/stick-n-slide.scss
@@ -33,7 +33,7 @@ table.sns {
         (as, from the rendering engine perspective, it is no longer a part of the table).
         We need to add these borders back via some css generated elements.
       */
-      &:not(.sns__placeholder-cell), .sns__cell-content {
+      &:not(.sns__placeholder-cell), .sns__cell-contents {
         b {
           position: relative;
           z-index: 1;
@@ -56,10 +56,12 @@ table.sns {
         position: relative;
       }
       .sns__cell-inner {
-        display: flex;
-        // background: rgba(0,255,0,0.2);
+        // display: flex;
         position: relative;
         height: inherit;
+      }
+      .sns__cell-contents {
+        // display: inline-block;
       }
 
       /*
